--- a/toho/index.html
+++ b/toho/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>東方 幻魔郷(仮) / TohoJS</title>
+<title>東方風 STG / TohoJS</title>
 <script type="text/javascript" src="lib/glMatrix-0.9.5.min.js"></script>
 <script type="text/javascript" src="utility/Inherit.js"></script>
 <script type="text/javascript" src="utility/Draw.js"></script>
